# check_batch_completion_in_omtprj

./: README.md  omt_check_batch_completion.py  project_stats.json  project_stats.txt  pyproject.toml
