[tool.poetry]
name = "check-batch-completion"
version = "0.1.0"
description = "Checks whether every batch (subfolder) in an OmegaT project is translated or not"
authors = ["msoutopico <m.soutopico@gmail.com>"]
readme = "README.md"
packages = [{include = "check_batch_completion"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.24.0"
pandas = "1.5.2"
python-dateutil = "2.8.2"
pytz = "2022.7"
six = "1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
